--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
   </header>
 
   <div id="viewDiv"></div>
+  <!-- Right-side tools panel -->
+<div id="toolsPanel" class="tools-panel">
+  <div class="tools-title">Tools</div>
+  <div id="widgetLayerList" class="tools-section"></div>
+  <div id="widgetBasemap" class="tools-section"></div>
+  <div id="widgetBookmarks" class="tools-section"></div>
+  <div id="widgetMeasure" class="tools-section"></div>
+</div>
 </body>
 </html>
