--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 
     <details class="tools-group">
       <summary>Measure</summary>
-      <div id="widgetMeasure" class="tools-section"></div>
+      
+      <div class="tools-section">
+        <div id="measureButtons"></div>
+        <div id="measureWidget"></div>
+      </div>
     </details>
 </div>
 </body>
