--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
   <div id="toolsPanel" class="tools-panel">
     <div class="tools-title">Tools</div>
 
-    <details open class="tools-group">
+    <details open class="tools-group" id="secLayers">
       <summary>Layers</summary>
       <div id="widgetLayerList" class="tools-section"></div>
     </details>
 
-    <details class="tools-group">
+    <details class="tools-group" id="secBasemaps">
       <summary>Basemaps</summary>
       <div id="widgetBasemap" class="tools-section"></div>
     </details>
 
-    <details class="tools-group">
+    <details class="tools-group" id="secBookmarks">
       <summary>Bookmarks</summary>
       <div id="widgetBookmarks" class="tools-section"></div>
     </details>
